[DIALOG][CLEANUP] Cleanup dialog UI - Use .btn instead of .button in all dialogs - Use container-fluid to style the content items of the dialog - Use header  tag to style the dialog header - Use bootstrap's w-* and h-*. Set dialog max-width to 95% for some margin even in full screen dialogs - Use whitespace: pre-wrap to correctly show newlines and spaces in alert and confirm messages - Move dialog.css into core directory. Update classes to reflect new cleaner design - Remove useless css files

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -16,7 +16,7 @@ ul {
 }
 
 /* Reset Container padding and margins to 0 */
-[class*="col-"], .row, .container, .container-fluid {
+[class*="col-"], .row, .container {
     padding:    0;
     margin:     0;
 }
