--- a/src/main/webapp/css/core/btn.css
+++ b/src/main/webapp/css/core/btn.css
@@ -1,6 +1,7 @@
 /* -- Bootstrap button styling -- */
 .btn {
     padding: 0.5em 1.5em;
+    margin: 5px;
     border: none;
 }
 
@@ -8,7 +9,8 @@
     background-color: #37bcf2;
 }
 
-.btn-primary:hover:enabled {
+.btn-primary:hover:enabled, .btn:hover:enabled {
+    color: white;
     background-color: #31a9d9;
     transition-duration: 0.4s;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
